--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.3",
     "express": "^4.15.3",
+    "express-validator": "^3.2.1",
     "multer": "^1.3.0",
     "mysql": "^2.13.0"
   }
