--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.15.3",
     "express-validator": "^3.2.1",
     "multer": "^1.3.0",
-    "mysql": "^2.13.0"
+    "mysql": "^2.13.0",
+    "xlsx-to-json-lc": "^0.4.1"
   }
 }
